# aleo-ffi-bindings

./: .gitmodules  Cargo.toml  README.md  libaleo.h
src/: lib.rs
src/account/: address.rs  mod.rs  private_key.rs  signature.rs  view_key.rs
src/environment/: environment.rs  linear_combination.rs  mod.rs
src/network/: mod.rs  traits.rs
src/types/: address.rs  boolean.rs  field.rs  group.rs  mod.rs  scalar.rs  traits.rs
src/utilities/: bititerators.rs  mod.rs
