[package]
name = "aleo-ffi-bindings"
version = "0.0.1"
authors = [ "Andrew Rosborough <arosborough@oculat.us>" ]
description = "Aleo SDK C/C++ FFI Bindings"
homepage = "https://github.com/arosboro/aleo-ffi-bindings"
repository = "https://github.com/arosboro/aleo-ffi-bindings"
keywords = [
  "aleo",
  "cryptography",
  "blockchain",
  "decentralized",
  "zero-knowledge",
]
categories = [ "cryptography::cryptocurrencies", "operating-systems", "embedded-systems" ]
license = "GPL-3.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "aleo"
crate-type = [ "staticlib" ]

[profile.dev]
panic = "abort"
opt-level = 'z'
lto = true
codegen-units = 1

[profile.release]
panic = "abort"
opt-level = 'z'
lto = true
codegen-units = 1

[dependencies]
safer-ffi = { version = "0.0.10", features = ["proc_macros"] }

[dependencies.aleo-account]
version = "0.3.2"
default-features = false

[dependencies.rand]
version = "0.8"
default-features = false

[dependencies.anyhow]
version = "1.0"
default-features = false

[dependencies.console_error_panic_hook]
version = "0.1.7"
default-features = false

[features]
c-headers = ["safer-ffi/headers"]
